--- a/package.json
+++ b/package.json
@@ -1,27 +1,19 @@
 {
-  "name": "portfolio-generator",
+  "name": "project",
   "version": "1.0.0",
-  "description": "![Generator]()",
+  "description": "",
   "main": "app.js",
+  "directories": {
+    "lib": "lib"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./test/sample.js",
+    "start": "node app.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lernantino/portfolio-generator.git"
-  },
-  "author": "lernantino",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/lernantino/portfolio-generator/issues"
-  },
-  "homepage": "https://github.com/lernantino/portfolio-generator#readme",
   "dependencies": {
-    "inquirer": "8.2.4",
-    "moment": "^2.29.4"
-  },
-  "keywords": [
-    "generator",
-    "program"
-  ]
+    "inquirer": "^8.2.4"
+  }
 }
